--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "sass": "^1.89.0",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
