feat: add js-cookie for token management and update auth store for improved logout functionality

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "sass": "^1.89.0",
@@ -20,6 +21,7 @@
     "vuetify": "^3.8.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.27",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
