docs: update README with project details and usage instructions; add screenshots for user interface fix: correct version number in package.json feat: add initial screenshots for login, registration, dashboard, transfers, and statements

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagat-bank-panel",
   "private": true,
-  "version": "0.0.0",
+  "vesion": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
